--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Wit-Facebook",
+  "name": "toncsi-wit",
   "version": "1.0.0",
   "description": "Simple toncsi-wit",
   "main": "index.js",
